--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,20 @@
 ---
 
 <h1>Astro</h1>
+<h2>John Doe</h2>
+<h2>Jane Doe</h2>
 
 <style>
 	h1{
 		color: white;
 		background-color: steelblue;
 		text-align: center;
+	}
+	h2{
+		color: white;
+		text-align: center;
+		padding: .5rem;
+		background-color: plum;
 	}
 </style>
 
