--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,13 @@
 ---
 
 <h1>Astro</h1>
-<h2>John Doe</h2>
-<h2>Jane Doe</h2>
+<h2 id="Blue">John Doe</h2>
+<h2 id="Pink">Jane Doe</h2>
 
 <style>
 	h1{
 		color: white;
-		background-color: steelblue;
+		background-color: black;
 		text-align: center;
 	}
 	h2{
@@ -17,6 +17,9 @@
 		text-align: center;
 		padding: .5rem;
 		background-color: plum;
+	}
+	h2 #Blue{
+		background-color: steelblue;
 	}
 </style>
 
